--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     def room_version = "2.4.2"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    annotationProcessor "androidx.room:roomcompiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     //https://developer.android.com/kotlin/ktx#room
     implementation "androidx.room:room-ktx:$room_version"
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
